--- a/_posts/2019-03-23-hackback2019.md
+++ b/_posts/2019-03-23-hackback2019.md
@@ -15,7 +15,7 @@ took part and we had over 200 participants on the day.
 ![16 Universities](/assets/img/hackback2019/universities.png)
 
 The CTF event involved Universities getting into teams of four
-to solve security questions designed for all skill sets. The categories for the event as described below:
+to solve security questions designed for all skill sets. The categories for the event are below:
 
 * Web Exploitation
 * Forensics
@@ -44,7 +44,7 @@ It was because of these companies we were able to run the event and give away pr
 ## Livestreaming
 
 Every event has its hiccups and ours was that our livestream wouldn't work at the beginning of the event. However we managed to
-get something working for end. We had hoped every University would have live streamed their students hacking away. Please watch from 11:08.
+get something working for the end. We had hoped every University would have live streamed their students hacking away. Watch from 11:08.
 <iframe width="560" height="315" src="https://www.youtube.com/embed/H_n4f-yo8yU?start=668" frameborder="0" allowfullscreen></iframe>
 
 ## The next HackBack
@@ -52,7 +52,7 @@ get something working for end. We had hoped every University would have live str
 As the event was so successful we have decided to run it again this **October**!
 
 After HackBack had finished, we were overwhelmed by the amount of users that were affected by our event. It makes the hundereds of
-hours we put into making the platform and HackBack challenges all worth it. A few mentionable commands are below:
+hours we put into making the platform and HackBack challenges all worth it. A few mentionable comments are below:
 
 ![Andrew from Twitter](/assets/img/hackback2019/andrew.png)
 ![jk16 on discord](/assets/img/hackback2019/jk16.png)
@@ -103,4 +103,4 @@ We have listed some improvements for our next HackBack event in October.
 I am truely proud of how HackBack turned out. We loved creating this and the participants loved it even more it seemed.
 Our next event will be even better... bring on HackBack October!
 
-If you are interested in completing the challenges set on the day, click [here](https://tryhackme.com/room/hackback2019).
+If you are interested in completing the challenges set on the day, check it out: [tryhackme.com/room/hackback2019](https://tryhackme.com/room/hackback2019).
